# ROME

./: README.md  pyproject.toml
examples/configs/: local_lmstudio.yaml  local_ollama_openai.yaml  local_vllm.yaml
src/ale_lite/: __init__.py
src/ale_lite/api/: openai_client.py
src/ale_lite/iflow/: agent.py  cli.py  context.py  prompts.py  replay.py  tools.py  trajectory.py
src/ale_lite/rock/: cli.py  docker_sandbox.py  factory.py  filesystem.py  limits.py  local_sandbox.py  sandbox.py
src/ale_lite/roll/: cli.py  datasets.py  ipa.py  metrics.py  preference.py  train_dpo.py
src/ale_lite/tbp/: cli.py  contamination.py  runner.py  scoring.py  tasks.py
tasks/tbp_examples/: basics_ls.yaml  edit_file.yaml  python_fix_test.yaml
tests/: conftest.py  test_backend_resolution.py  test_chunking_and_ipa.py  test_context_budgeting.py  test_deadline_enforcement.py  test_docker_sandbox.py  test_openai_client.py  test_rock_doctor.py  test_sandbox_isolation.py  test_tbp_runner_smoke.py  test_trajectory_schema.py
